--- a/app/src/main/res/layout/activity_add_person.xml
+++ b/app/src/main/res/layout/activity_add_person.xml
@@ -126,6 +126,16 @@
         android:inputType="date"
         android:autofillHints="@string/birth_hint"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_quotes"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/et_dateDeath"
+        app:layout_constraintBottom_toTopOf="@id/btn_add"
+        app:layout_constraintStart_toStartOf="@id/guide_start"
+        app:layout_constraintEnd_toEndOf="@id/guide_end"
+        tools:listitem="@layout/item_quote"/>
+
     <Button
         android:id="@+id/btn_add"
         android:layout_width="match_parent"
@@ -134,5 +144,5 @@
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/add"/>
-
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
