--- a/app/src/main/res/layout/activity_add_person.xml
+++ b/app/src/main/res/layout/activity_add_person.xml
@@ -131,10 +131,31 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/et_dateDeath"
-        app:layout_constraintBottom_toTopOf="@id/btn_add"
+        app:layout_constraintBottom_toTopOf="@id/btn_addQuote"
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         tools:listitem="@layout/item_quote"/>
+
+    <EditText
+        android:id="@+id/et_quote"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_add"
+        app:layout_constraintStart_toStartOf="@id/guide_start"
+        app:layout_constraintEnd_toStartOf="@id/btn_addQuote"
+        app:layout_constraintTop_toTopOf="@id/btn_addQuote"
+        tools:text="@tools:sample/lorem/random"
+        android:autofillHints="@string/quote_hint"
+        android:inputType="textMultiLine" />
+
+    <Button
+        android:id="@+id/btn_addQuote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:labelFor="@id/et_quote"
+        app:layout_constraintEnd_toEndOf="@id/guide_end"
+        app:layout_constraintBottom_toTopOf="@id/btn_add"
+        android:text="@string/add_quote"/>
 
     <Button
         android:id="@+id/btn_add"
