--- a/app/src/main/res/layout/activity_add_person.xml
+++ b/app/src/main/res/layout/activity_add_person.xml
@@ -30,24 +30,24 @@
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:labelFor="@id/et_name"
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintTop_toTopOf="@id/guide_top"
+        app:layout_constraintBottom_toBottomOf="@id/et_name"
         android:text="@string/name"/>
 
     <EditText
         android:id="@+id/et_name"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:autofillHints="@string/name_hint"
         app:layout_constraintTop_toTopOf="@id/guide_top"
         app:layout_constraintStart_toEndOf="@id/tv_name"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
-        app:layout_constraintBottom_toBottomOf="@id/tv_name"
-        tools:text="@tools:sample/lorem/random"/>
+        tools:text="@tools:sample/lorem"/>
 
     <TextView
         android:id="@+id/tv_description"
@@ -61,7 +61,7 @@
     <EditText
         android:id="@+id/et_description"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="70dp"
         android:inputType="textMultiLine"
         android:autofillHints="@string/description_hint"
         app:layout_constraintTop_toBottomOf="@id/tv_description"
@@ -69,21 +69,13 @@
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         tools:text="@tools:sample/lorem/random"/>
 
-    <TextView
-        android:id="@+id/tv_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/et_description"
-        app:layout_constraintStart_toStartOf="@id/guide_start"
-        app:layout_constraintBottom_toBottomOf="@id/btn_browseImage"
-        android:text="@string/picture"/>
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_browseImage"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_picture"
-        app:layout_constraintStart_toEndOf="@id/tv_picture"
+        app:layout_constraintTop_toBottomOf="@id/et_description"
+        app:layout_constraintStart_toStartOf="@id/guide_start"
+        app:layout_constraintEnd_toEndOf="@id/guide_end"
         android:text="@string/browse"/>
 
     <TextView
@@ -91,8 +83,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:labelFor="@id/et_dateBirth"
-        app:layout_constraintTop_toBottomOf="@id/btn_browseImage"
         app:layout_constraintStart_toStartOf="@id/guide_start"
+        app:layout_constraintTop_toTopOf="@id/et_dateBirth"
+        app:layout_constraintBottom_toBottomOf="@id/et_dateBirth"
         android:text="@string/birth_date"/>
 
     <EditText
@@ -102,7 +95,6 @@
         app:layout_constraintStart_toEndOf="@id/tv_dateBirth"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintTop_toBottomOf="@id/btn_browseImage"
-        app:layout_constraintBottom_toBottomOf="@id/tv_dateBirth"
         android:inputType="date"
         android:autofillHints="@string/birth_hint"/>
 
@@ -111,7 +103,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:labelFor="@id/et_dateDeath"
-        app:layout_constraintTop_toBottomOf="@id/et_dateBirth"
+        app:layout_constraintTop_toTopOf="@id/et_dateDeath"
+        app:layout_constraintBottom_toBottomOf="@id/et_dateDeath"
         app:layout_constraintStart_toStartOf="@id/guide_start"
         android:text="@string/birth_date"/>
 
@@ -122,7 +115,6 @@
         app:layout_constraintStart_toEndOf="@id/tv_dateDeath"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintTop_toBottomOf="@id/et_dateBirth"
-        app:layout_constraintBottom_toBottomOf="@id/tv_dateDeath"
         android:inputType="date"
         android:autofillHints="@string/birth_hint"/>
 
