--- a/app/src/main/res/layout/item_quote.xml
+++ b/app/src/main/res/layout/item_quote.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.8"/>
+        app:layout_constraintGuide_percent="0.7"/>
 
     <TextView
         android:id="@+id/tv_quote"
@@ -25,8 +25,8 @@
 
     <Button
         android:id="@+id/btn_remove"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/guide_separator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
