--- a/app/src/main/res/layout/fragment_edit_person.xml
+++ b/app/src/main/res/layout/fragment_edit_person.xml
@@ -1,167 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.EditPersonFragment"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:context=".fragments.EditPersonFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.AddPersonActivity">
+        tools:context=".activities.AddPersonFragment">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.1"/>
+            app:layout_constraintGuide_percent="0.1" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.9"/>
+            app:layout_constraintGuide_percent="0.9" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.05"/>
+            app:layout_constraintGuide_percent="0.05" />
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@id/et_name"
-            app:layout_constraintStart_toStartOf="@id/guide_start"
-            app:layout_constraintTop_toTopOf="@id/guide_top"
+            android:text="@string/name"
             app:layout_constraintBottom_toBottomOf="@id/et_name"
-            android:text="@string/name"/>
+            app:layout_constraintStart_toStartOf="@id/guide_start"
+            app:layout_constraintTop_toTopOf="@id/guide_top" />
 
         <EditText
             android:id="@+id/et_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
             android:autofillHints="@string/name_hint"
-            app:layout_constraintTop_toTopOf="@id/guide_top"
-            app:layout_constraintStart_toEndOf="@id/tv_name"
+            android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
-            tools:text="@tools:sample/lorem"/>
+            app:layout_constraintStart_toEndOf="@id/tv_name"
+            app:layout_constraintTop_toTopOf="@id/guide_top"
+            tools:text="@tools:sample/lorem" />
 
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:labelFor="@id/et_description"
+            android:text="@string/description"
             app:layout_constraintStart_toStartOf="@id/guide_start"
-            app:layout_constraintTop_toBottomOf="@id/et_name"
-            android:text="@string/description"/>
+            app:layout_constraintTop_toBottomOf="@id/et_name" />
 
         <EditText
             android:id="@+id/et_description"
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:inputType="textMultiLine"
             android:autofillHints="@string/description_hint"
-            app:layout_constraintTop_toBottomOf="@id/tv_description"
-            app:layout_constraintStart_toStartOf="@id/tv_description"
+            android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
-            tools:text="@tools:sample/lorem/random"/>
+            app:layout_constraintStart_toStartOf="@id/tv_description"
+            app:layout_constraintTop_toBottomOf="@id/tv_description"
+            tools:text="@tools:sample/lorem/random" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_browseImage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/et_description"
-            app:layout_constraintStart_toStartOf="@id/guide_start"
+            android:text="@string/browse"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
-            android:text="@string/browse"/>
+            app:layout_constraintStart_toStartOf="@id/guide_start"
+            app:layout_constraintTop_toBottomOf="@id/et_description" />
 
         <TextView
             android:id="@+id/tv_dateBirth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@id/et_dateBirth"
-            app:layout_constraintStart_toStartOf="@id/guide_start"
-            app:layout_constraintTop_toTopOf="@id/et_dateBirth"
+            android:text="@string/birth_date"
             app:layout_constraintBottom_toBottomOf="@id/et_dateBirth"
-            android:text="@string/birth_date"/>
+            app:layout_constraintStart_toStartOf="@id/guide_start"
+            app:layout_constraintTop_toTopOf="@id/et_dateBirth" />
 
         <EditText
             android:id="@+id/et_dateBirth"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/tv_dateBirth"
-            app:layout_constraintEnd_toEndOf="@id/guide_end"
-            app:layout_constraintTop_toBottomOf="@id/btn_browseImage"
+            android:autofillHints="@string/birth_hint"
             android:inputType="date"
-            android:autofillHints="@string/birth_hint"/>
+            app:layout_constraintEnd_toEndOf="@id/guide_end"
+            app:layout_constraintStart_toEndOf="@id/tv_dateBirth"
+            app:layout_constraintTop_toBottomOf="@id/btn_browseImage" />
 
         <TextView
             android:id="@+id/tv_dateDeath"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@id/et_dateDeath"
-            app:layout_constraintTop_toTopOf="@id/et_dateDeath"
+            android:text="@string/birth_date"
             app:layout_constraintBottom_toBottomOf="@id/et_dateDeath"
             app:layout_constraintStart_toStartOf="@id/guide_start"
-            android:text="@string/birth_date"/>
+            app:layout_constraintTop_toTopOf="@id/et_dateDeath" />
 
         <EditText
             android:id="@+id/et_dateDeath"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/tv_dateDeath"
-            app:layout_constraintEnd_toEndOf="@id/guide_end"
-            app:layout_constraintTop_toBottomOf="@id/et_dateBirth"
+            android:autofillHints="@string/birth_hint"
             android:inputType="date"
-            android:autofillHints="@string/birth_hint"/>
+            app:layout_constraintEnd_toEndOf="@id/guide_end"
+            app:layout_constraintStart_toEndOf="@id/tv_dateDeath"
+            app:layout_constraintTop_toBottomOf="@id/et_dateBirth" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_quotes"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/et_dateDeath"
             app:layout_constraintBottom_toTopOf="@id/btn_addQuote"
-            app:layout_constraintStart_toStartOf="@id/guide_start"
             app:layout_constraintEnd_toEndOf="@id/guide_end"
-            tools:listitem="@layout/item_quote"/>
+            app:layout_constraintStart_toStartOf="@id/guide_start"
+            app:layout_constraintTop_toBottomOf="@id/et_dateDeath"
+            tools:listitem="@layout/item_quote" />
 
         <EditText
             android:id="@+id/et_quote"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/btn_add"
-            app:layout_constraintStart_toStartOf="@id/guide_start"
-            app:layout_constraintEnd_toStartOf="@id/btn_addQuote"
-            app:layout_constraintTop_toTopOf="@id/btn_addQuote"
-            tools:text="@tools:sample/lorem/random"
             android:autofillHints="@string/quote_hint"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            app:layout_constraintBottom_toTopOf="@id/btn_add"
+            app:layout_constraintEnd_toStartOf="@id/btn_addQuote"
+            app:layout_constraintStart_toStartOf="@id/guide_start"
+            app:layout_constraintTop_toTopOf="@id/btn_addQuote"
+            tools:text="@tools:sample/lorem/random" />
 
         <Button
             android:id="@+id/btn_addQuote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@id/et_quote"
-            app:layout_constraintEnd_toEndOf="@id/guide_end"
+            android:text="@string/add_quote"
             app:layout_constraintBottom_toTopOf="@id/btn_add"
-            android:text="@string/add_quote"/>
+            app:layout_constraintEnd_toEndOf="@id/guide_end" />
 
         <Button
             android:id="@+id/btn_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/guide_end"
-            app:layout_constraintStart_toStartOf="@id/guide_start"
+            android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@string/save"/>
+            app:layout_constraintEnd_toEndOf="@id/guide_end"
+            app:layout_constraintStart_toStartOf="@id/guide_start" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
