--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -55,6 +55,27 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.12" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_descriptionBottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_buttonsTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.92"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"/>
+
     <ImageView
         android:id="@+id/iv_person"
         android:layout_width="0dp"
@@ -92,11 +113,35 @@
     <TextView
         android:id="@+id/tv_description"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintTop_toTopOf="@id/guide_descriptionTop"
+        app:layout_constraintBottom_toBottomOf="@id/guide_descriptionBottom"
         tools:text="@tools:sample/lorem/random" />
+
+    <Button
+        android:id="@+id/btn_edit"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/guide_start"
+        app:layout_constraintTop_toTopOf="@id/guide_buttonsTop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/center"
+        android:text="@string/edit"/>
+
+    <Button
+        android:id="@+id/btn_remove"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/center"
+        app:layout_constraintEnd_toEndOf="@id/guide_end"
+        app:layout_constraintTop_toTopOf="@id/guide_buttonsTop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/remove"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
